Se crean consultas para estadisticas.
